<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".activity.MainActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_photo"
            android:layout_width="116dp"
            android:layout_height="116dp"
            android:layout_marginTop="142dp"
            android:background="@null"
            android:src="@drawable/ic_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_name"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="58dp"
            android:hint="@string/name"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/img_photo"
            tools:layout_editor_absoluteX="32dp" />

        <EditText
            android:id="@+id/et_palindrome"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="22dp"
            android:hint="@string/palindrome"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/et_name" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_check"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="45dp"
            android:text="@string/check"
            app:layout_constraintTop_toBottomOf="@id/et_palindrome" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="15dp"
            android:text="@string/next"
            app:layout_constraintTop_toBottomOf="@id/btn_check" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>